// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`history reducer ADD_NEW_MESSAGE should not set scrollTo if the author is a different user 1`] = `
Object {
  "channel": Object {
    "id": "channelId1",
  },
  "user": Object {
    "id": "userId1",
  },
}
`;

exports[`history reducer ADD_NEW_MESSAGE should not update the state on a different channel 1`] = `
Object {
  "channel": Object {
    "id": "aaa",
  },
}
`;

exports[`history reducer ADD_NEW_MESSAGE should set scrollTo if the author is the current user 1`] = `
Object {
  "channel": Object {
    "id": "channelId1",
  },
  "user": Object {
    "id": "userId1",
  },
}
`;

exports[`history reducer should handle UNSET_HISTORY_SCROLL_TO 1`] = `
Object {
  "receivedMessageViaSocket": false,
  "scrollTo": null,
  "scrollToAlignment": null,
}
`;
